fix(cluster): disable Jellyfin LDAP TLS verify
This started causing problems out of nowhere, and it's getting in the
way of development. Disabling for now, since the cluster isn't in
production anyway, and we're probably going to ditch LDAP for IdM.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/38

--- a/cluster/apps/media-server/jellyfin/configmap.yaml
+++ b/cluster/apps/media-server/jellyfin/configmap.yaml
@@ -166,7 +166,7 @@ data:
       <LdapPort>3636</LdapPort>
       <UseSsl>true</UseSsl>
       <UseStartTls>false</UseStartTls>
-      <SkipSslVerify>false</SkipSslVerify>
+      <SkipSslVerify>true</SkipSslVerify>
       <LdapBindUser>cn=jellyfin,ou=services,dc=homelab,dc=internal</LdapBindUser>
       <LdapBindPassword>LDAP_BIND_PASSWORD</LdapBindPassword>
       <LdapBaseDn>ou=people,dc=homelab,dc=internal</LdapBaseDn>
