chore(metal): update OpenStack release to 2023.2 Bobcat
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/40

--- a/metal/roles/openstack/defaults/defaults/main.yml
+++ b/metal/roles/openstack/defaults/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
 # Name (path) of the venv, using the root user's home as the base.
 # Ex. A value of 'kolla-venv' will become '/root/kolla-venv'
-sdk_venv: sdk-venv
+kolla_venv: /root/kolla-venv
