--- a/metal/roles/openstack/kolla-deploy/handlers/bootstrap.yml
+++ b/metal/roles/openstack/kolla-deploy/handlers/bootstrap.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install Ansible dependencies
+- name: Install Ansible Galaxy dependencies
   ansible.builtin.shell: |
     source {{ kolla_venv }}/bin/activate
     kolla-ansible install-deps
