--- a/metal/roles/openstack/kolla-deploy/handlers/octavia/post-deploy.yml
+++ b/metal/roles/openstack/kolla-deploy/handlers/octavia/post-deploy.yml
@@ -10,12 +10,12 @@
   ansible.builtin.shell:
     cmd: source /etc/kolla/octavia-openrc.sh
 
-# Run all / only tasks that use Ansible OpenStack modules after this
+# Run only tasks that use Ansible OpenStack modules after this
 - name: Set Python interpreter to venv
   ansible.builtin.set_fact:
-    ansible_python_interpreter: "{{ sdk_venv }}/bin/python"
+    ansible_python_interpreter: "{{ kolla_venv }}/bin/python"
 
-- name: Get Octavia password
+- name: 'Octavia : Get user password'
   ansible.builtin.shell:
     cmd: |
       grep OS_PASSWORD /etc/kolla/octavia-openrc.sh | awk '{
@@ -45,3 +45,28 @@
     properties:
       hw_architecture: x86_64
       hw_rng_model: virtio
+
+- name: 'Octavia : Get health-manager port info'
+  openstack.cloud.port_info:
+    cloud: kolla-admin
+    filters:
+      device_owner: "Octavia:health-mgr"
+  environment:
+    OS_CLIENT_CONFIG_FILE: /etc/kolla/clouds.yaml
+  register: octavia_health_mgr
+
+- name: "Octavia : Install 'octavia-interface.sh'"
+  ansible.builtin.template:
+    src: octavia-interface.sh.j2
+    dest: /usr/local/bin/octavia-interface.sh
+    owner: root
+    group: root
+    mode: 0744
+
+- name: "Octavia : Replace 'octavia-interface.service'"
+  ansible.builtin.copy:
+    src: octavia-interface.service
+    dest: /etc/systemd/system/octavia-interface.service
+    owner: root
+    group: root
+    mode: 0644
