--- a/metal/vars/globals.yml
+++ b/metal/vars/globals.yml
@@ -42,7 +42,7 @@ workaround_ansible_issue_8743: yes
 #kolla_base_distro: "rocky"
 
 # Do not override this unless you know what you are doing.
-#openstack_release: "zed"
+#openstack_release: "2023.2"
 
 # Docker image tag used by default.
 #openstack_tag: "{{ openstack_release ~ openstack_tag_suffix }}"
@@ -79,12 +79,13 @@ kolla_internal_vip_address: "192.168.1.11"
 # Optionally change the path to sysctl.conf modified by Kolla Ansible plays.
 #kolla_sysctl_conf_path: /etc/sysctl.conf
 
-################
+##################
 # Container engine
-################
+##################
 
-# Valid options are [ docker ]
-# kolla_container_engine: docker
+# Valid options are [ docker, podman ]
+#kolla_container_engine: docker
+
 
 ################
 # Docker options
@@ -137,7 +138,7 @@ network_interface: "eno1"
 #swift_replication_interface: "{{ swift_storage_interface }}"
 #tunnel_interface: "{{ network_interface }}"
 #dns_interface: "{{ network_interface }}"
-octavia_network_interface: "o-hm0"
+#octavia_network_interface: "{{ api_interface }}"
 
 # Configure the address family (AF) per network.
 # Valid options are [ ipv4, ipv6 ]
@@ -269,6 +270,19 @@ neutron_external_interface: "eno2"
 # Please read the docs for more details.
 #acme_client_servers: []
 
+####################
+# LetsEncrypt options
+####################
+# This option is required for letsencrypt role to work properly.
+#letsencrypt_email: ""
+
+####################
+# LetsEncrypt certificate server options
+####################
+#letsencrypt_cert_server: "https://acme-v02.api.letsencrypt.org/directory"
+# attempt to renew Let's Encrypt certificate every 12 hours
+#letsencrypt_cron_renew_schedule:  "0   */12   *   *   *"
+
 ################
 # Region options
 ################
@@ -306,7 +320,7 @@ enable_haproxy: "no"
 
 # OpenStack services can be enabled or disabled with these options
 #enable_aodh: "no"
-enable_barbican: "yes"
+#enable_barbican: "no"
 #enable_blazar: "no"
 #enable_ceilometer: "no"
 #enable_ceilometer_ipmi: "no"
@@ -317,7 +331,7 @@ enable_barbican: "yes"
 enable_cinder: "yes"
 enable_cinder_backup: "no"
 #enable_cinder_backend_hnas_nfs: "no"
-enable_cinder_backend_iscsi: "{{ enable_cinder_backend_lvm | bool }}"
+#enable_cinder_backend_iscsi: "{{ enable_cinder_backend_lvm | bool }}"
 enable_cinder_backend_lvm: "yes"
 #enable_cinder_backend_nfs: "no"
 #enable_cinder_backend_quobyte: "no"
@@ -325,10 +339,9 @@ enable_cinder_backend_lvm: "yes"
 #enable_cinder_backend_pure_fc: "no"
 #enable_cinder_backend_pure_roce: "no"
 #enable_cloudkitty: "no"
-enable_cluster_user_trust: "true"
 #enable_collectd: "no"
 #enable_cyborg: "no"
-#enable_designate: "yes"
+#enable_designate: "no"
 #enable_destroy_images: "no"
 #enable_etcd: "no"
 #enable_fluentd: "yes"
@@ -337,7 +350,7 @@ enable_cluster_user_trust: "true"
 #enable_gnocchi_statsd: "no"
 #enable_grafana: "no"
 #enable_grafana_external: "{{ enable_grafana | bool }}"
-enable_heat: "yes"
+#enable_heat: "{{ enable_openstack_core | bool }}"
 #enable_horizon: "{{ enable_openstack_core | bool }}"
 #enable_horizon_blazar: "{{ enable_blazar | bool }}"
 #enable_horizon_cloudkitty: "{{ enable_cloudkitty | bool }}"
@@ -363,9 +376,11 @@ enable_heat: "yes"
 #enable_influxdb: "{{ enable_cloudkitty | bool and cloudkitty_storage_backend == 'influxdb' }}"
 #enable_ironic: "no"
 #enable_ironic_neutron_agent: "{{ enable_neutron | bool and enable_ironic | bool }}"
+#enable_ironic_prometheus_exporter: "{{ enable_ironic | bool and enable_prometheus | bool }}"
 #enable_iscsid: "{{ enable_cinder | bool and enable_cinder_backend_iscsi | bool }}"
 #enable_kuryr: "no"
 enable_magnum: "yes"
+enable_cluster_user_trust: "true"
 #enable_manila: "no"
 #enable_manila_backend_generic: "no"
 #enable_manila_backend_hnas: "no"
@@ -394,7 +409,8 @@ enable_neutron_provider_networks: "yes"
 #enable_nova_ssh: "yes"
 enable_octavia: "yes"
 #enable_octavia_driver_agent: "{{ enable_octavia | bool and neutron_plugin_agent == 'ovn' }}"
-#enable_opensearch: "{{ enable_central_logging | bool or enable_osprofiler | bool or enable_skydive | bool or (enable_cloudkitty | bool and cloudkitty_storage_backend == 'elasticsearch') }}"
+#enable_octavia_jobboard: "{{ enable_octavia | bool and 'amphora' in octavia_provider_drivers }}"
+#enable_opensearch: "{{ enable_central_logging | bool or enable_osprofiler | bool or (enable_cloudkitty | bool and cloudkitty_storage_backend == 'elasticsearch') }}"
 #enable_opensearch_dashboards: "{{ enable_opensearch | bool }}"
 #enable_opensearch_dashboards_external: "{{ enable_opensearch_dashboards | bool }}"
 #enable_openvswitch: "{{ enable_neutron | bool and neutron_plugin_agent != 'linuxbridge' }}"
@@ -404,10 +420,10 @@ enable_octavia: "yes"
 #enable_placement: "{{ enable_nova | bool or enable_zun | bool }}"
 #enable_prometheus: "no"
 #enable_proxysql: "no"
-#enable_redis: "no"
+enable_redis: "yes"
 #enable_sahara: "no"
 #enable_senlin: "no"
-#enable_skydive: "no"
+#enable_skyline: "no"
 #enable_solum: "no"
 #enable_swift: "no"
 #enable_swift_s3api: "no"
@@ -419,6 +435,15 @@ enable_octavia: "yes"
 #enable_vitrage: "no"
 #enable_watcher: "no"
 #enable_zun: "no"
+
+#############
+# S3 options
+#############
+# Common options for S3 Cinder Backup and Glance S3 backend.
+#s3_url:
+#s3_bucket:
+#s3_access_key:
+#s3_secret_key:
 
 ##################
 # RabbitMQ options
@@ -452,27 +477,27 @@ enable_octavia: "yes"
 #external_ceph_cephx_enabled: "yes"
 
 # Glance
-#ceph_glance_keyring: "ceph.client.glance.keyring"
 #ceph_glance_user: "glance"
+#ceph_glance_keyring: "client.{{ ceph_glance_user }}.keyring"
 #ceph_glance_pool_name: "images"
 # Cinder
-#ceph_cinder_keyring: "ceph.client.cinder.keyring"
 #ceph_cinder_user: "cinder"
+#ceph_cinder_keyring: "client.{{ ceph_cinder_user }}.keyring"
 #ceph_cinder_pool_name: "volumes"
-#ceph_cinder_backup_keyring: "ceph.client.cinder-backup.keyring"
 #ceph_cinder_backup_user: "cinder-backup"
+#ceph_cinder_backup_keyring: "client.{{ ceph_cinder_backup_user }}.keyring"
 #ceph_cinder_backup_pool_name: "backups"
 # Nova
 #ceph_nova_keyring: "{{ ceph_cinder_keyring }}"
 #ceph_nova_user: "nova"
 #ceph_nova_pool_name: "vms"
 # Gnocchi
-#ceph_gnocchi_keyring: "ceph.client.gnocchi.keyring"
 #ceph_gnocchi_user: "gnocchi"
+#ceph_gnocchi_keyring: "client.{{ ceph_gnocchi_user }}.keyring"
 #ceph_gnocchi_pool_name: "gnocchi"
 # Manila
-#ceph_manila_keyring: "ceph.client.manila.keyring"
 #ceph_manila_user: "manila"
+#ceph_manila_keyring: "client.{{ ceph_manila_user }}.keyring"
 
 #############################
 # Keystone - Identity Options
@@ -498,6 +523,7 @@ enable_octavia: "yes"
 #glance_backend_file: "yes"
 #glance_backend_swift: "no"
 #glance_backend_vmware: "no"
+#glance_backend_s3: "no"
 #enable_glance_image_cache: "no"
 #glance_enable_property_protection: "no"
 #glance_enable_interoperable_image_import: "no"
@@ -505,6 +531,14 @@ enable_octavia: "yes"
 # Due to this feature being experimental in glance,
 # the default value is "no".
 #glance_enable_rolling_upgrade: "no"
+
+####################
+# Glance S3 Backend
+####################
+#glance_backend_s3_url: "{{ s3_url }}"
+#glance_backend_s3_bucket: "{{ s3_bucket }}"
+#glance_backend_s3_access_key: "{{ s3_access_key }}"
+#glance_backend_s3_secret_key: "{{ s3_secret_key }}"
 
 ####################
 # Osprofiler options
@@ -539,10 +573,16 @@ cinder_volume_group: "cinder-standard"
 # Valid options are [ '', redis, etcd ]
 #cinder_coordination_backend: "{{ 'redis' if enable_redis|bool else 'etcd' if enable_etcd|bool else '' }}"
 
-# Valid options are [ nfs, swift, ceph ]
+# Valid options are [ nfs, swift, ceph, s3 ]
 #cinder_backup_driver: "ceph"
 #cinder_backup_share: ""
 #cinder_backup_mount_options_nfs: ""
+
+# Cinder backup S3 options
+#cinder_backup_s3_url: "{{ s3_url }}"
+#cinder_backup_s3_bucket: "{{ s3_bucket }}"
+#cinder_backup_s3_access_key: "{{ s3_access_key }}"
+#cinder_backup_s3_secret_key: "{{ s3_secret_key }}"
 
 #######################
 # Cloudkitty options
@@ -844,8 +884,6 @@ cinder_volume_group: "cinder-standard"
 #    no_gateway_ip: yes
 #    enable_dhcp: yes
 
-octavia_network_type: "tenant"
-
 # Octavia management network subnet CIDR.
 #octavia_amp_network_cidr: 10.1.0.0/24
 
@@ -860,9 +898,20 @@ octavia_network_type: "tenant"
 #octavia_amp_secgroup_list:
 #octavia_amp_flavor_id:
 
+# Workaround for Octavia health manager not being able to reach lb-mgmt-net.
+# TODO: Look into fixing/removing this later.
+octavia_network_type: "tenant"
+
 ####################
 # Corosync options
 ####################
 
 # this is UDP port
 #hacluster_corosync_port: 5405
+
+##############
+# etcd options
+##############
+# If `etcd_remove_deleted_members` is enabled, Kolla Ansible will automatically
+# remove etcd members from the cluster that are no longer in the inventory.
+#etcd_remove_deleted_members: "no"
