fix(ci): only run ansible-lint job in MR pipelines
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/41

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,8 @@ ansible-lint:
   stage: lint
   image: registry.gitlab.com/pipeline-components/ansible-lint:latest
   rules:
-    - changes:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      changes:
         - metal/**/*
   script:
     - ansible-lint --show-relpath metal
