fix(cluster): media volume permissions/access
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/39

--- a/cluster/apps/media-server/jellyfin/statefulset.yaml
+++ b/cluster/apps/media-server/jellyfin/statefulset.yaml
@@ -25,6 +25,8 @@ spec:
         runAsUser: 108096
         runAsGroup: 109030
         fsGroup: 109030
+        seLinuxOptions:
+          level: "s0:c123,c456"
       initContainers:
         - name: jellyfin-init
           image: "archlinux:base"
