--- a/cluster/apps/media-server/prowlarr/deployment.yaml
+++ b/cluster/apps/media-server/prowlarr/deployment.yaml
@@ -29,6 +29,76 @@ spec:
         runAsUser: 109696
         runAsGroup: 109696
         fsGroup: 109696
+      initContainers:
+        - name: init-database
+          image: "ghcr.io/onedr0p/prowlarr:1.9.4.4039"
+          imagePullPolicy: IfNotPresent
+          command: ["/configmaps/init-db.sh"]
+          env:
+            - name: PROWLARR__API_KEY
+              valueFrom: { secretKeyRef: { name: prowlarr-secrets, key: prowlarr-api-key } }
+            - name: PROWLARR__POSTGRES_HOST
+              valueFrom: { secretKeyRef: { name: mediadb-pguser-prowlarr, key: host } }
+            - name: PROWLARR__POSTGRES_PORT
+              valueFrom: { secretKeyRef: { name: mediadb-pguser-prowlarr, key: port } }
+            - name: PROWLARR__POSTGRES_USER
+              valueFrom: { secretKeyRef: { name: mediadb-pguser-prowlarr, key: user } }
+            - name: PROWLARR__POSTGRES_PASSWORD
+              valueFrom: { secretKeyRef: { name: mediadb-pguser-prowlarr, key: password } }
+            - name: PROWLARR__POSTGRES_MAIN_DB
+              value: prowlarr-main
+            - name: PROWLARR__POSTGRES_LOG_DB
+              value: prowlarr-log
+            - name: PROWLARR__THEME
+              value: dark
+          volumeMounts:
+            - name: prowlarr-configmap
+              mountPath: /configmaps
+            - name: prowlarr-data
+              mountPath: /config
+            - name: prowlarr-secrets
+              mountPath: /secrets
+          resources:
+            limits:
+              cpu: 2000m
+              memory: 500Mi
+            requests:
+              cpu: 500m
+              memory: 500Mi
+        - name: configure-db
+          image: docker.io/postgres:14
+          imagePullPolicy: IfNotPresent
+          command: ["/configmaps/configure-db.sh"]
+          env:
+            - name: POSTGRES_HOST
+              valueFrom: { secretKeyRef: { name: mediadb-pguser-prowlarr, key: host } }
+            - name: POSTGRES_PORT
+              valueFrom: { secretKeyRef: { name: mediadb-pguser-prowlarr, key: port } }
+            - name: POSTGRES_USER
+              valueFrom: { secretKeyRef: { name: mediadb-pguser-prowlarr, key: user } }
+            - name: PGPASSWORD
+              valueFrom: { secretKeyRef: { name: mediadb-pguser-prowlarr, key: password } }
+            - name: POSTGRES_DB
+              value: prowlarr-main
+          volumeMounts:
+            - name: prowlarr-configmap
+              mountPath: /configmaps
+            - name: prowlarr-data
+              mountPath: /config
+            - name: prowlarr-secrets
+              mountPath: /secrets
+          resources:
+            limits:
+              cpu: 250m
+              memory: 250Mi
+            requests:
+              cpu: 250m
+              memory: 250Mi
+          securityContext:
+            runAsNonRoot: true
+            privileged: false
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: false
       containers:
         - name: prowlarr
           image: "ghcr.io/onedr0p/prowlarr:1.9.4.4039"
@@ -97,6 +167,13 @@ spec:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: false
       volumes:
+        - name: prowlarr-configmap
+          configMap:
+            name: prowlarr-configmap
+            defaultMode: 0777
         - name: prowlarr-data
           emptyDir:
             sizeLimit: 1Gi
+        - name: prowlarr-secrets
+          secret:
+            secretName: prowlarr-secrets
