--- a/cluster/apps/media-server/radarr/kustomization.yaml
+++ b/cluster/apps/media-server/radarr/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: media-server
 resources:
+  - configmap.yaml
   - secrets.yaml
   - ingress.yaml
   - deployment.yaml
