chore(docs): migrate docs from external repo
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/53

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # Cluster testing directory
 cluster/testing/
 
+# Python venv
+venv/
+
 ############################
 ###   GENERATED FILES    ###
 ############################
