--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,9 @@ variables:
   TF_STATE_NAME: ${ENVIRONMENT}
   TF_VAR_gitops_repo: ${CI_PROJECT_URL}.git
 
+include:
+  - local: '/.ci/build-docs.yml'
+
 terraform:init:
   stage: prepare
   image: registry.gitlab.com/gitlab-org/terraform-images/releases/terraform:1.2.6
