--- a/.ci/build-docs.yml
+++ b/.ci/build-docs.yml
@@ -1,16 +1,15 @@
 # Deploy to GitLab Pages using mkdocs
 ---
 pages:
-  stage: deploy
-  image:
-    name: squidfunk/mkdocs-material:9
-    entrypoint: [""]
+  stage: build
+  image: docker.io/python:latest
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       changes:
         - .gitlab-ci.yml
         - docs/**/*
   script:
+    - pip install mkdocs-material
     - mkdocs build --config-file .mkdocs.yml --site-dir public
   artifacts:
     paths:
