fix(k8s): externally provision media volume
The media volume must be persistent, so this MR changes it to be externally provisioned (through Terraform). This way, we can rebuild clusters as needed, while retaining the data from this large volume which isn't feasible to backup.

This MR also temporarily scales the cluster down to 1 xlarge worker node, since multiattach is not working correctly for the volume.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/58

--- a/cluster/apps/media-server/storage.yaml
+++ b/cluster/apps/media-server/storage.yaml
@@ -1,13 +1,36 @@
 ---
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: media
+spec:
+  accessModes:
+    - ReadWriteMany
+  capacity:
+    storage: ${MEDIA_VOLUME_SIZE}
+  claimRef:
+    apiVersion: v1
+    kind: PersistentVolumeClaim
+    name: media
+    namespace: media-server
+  csi:
+    driver: cinder.csi.openstack.org
+    fsType: xfs
+    volumeHandle: ${MEDIA_VOLUME_ID}
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: cinder-standard
+  volumeMode: Filesystem
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: media
   namespace: media-server
 spec:
+  volumeName: media
   accessModes:
     - ReadWriteMany
   storageClassName: cinder-standard
   resources:
     requests:
-      storage: 256Gi
+      storage: ${MEDIA_VOLUME_SIZE}
