--- a/cluster/system/flux-sync/apps/media-server.yaml
+++ b/cluster/system/flux-sync/apps/media-server.yaml
@@ -18,3 +18,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  postBuild:
+    substitute:
+      MEDIA_VOLUME_ID: ${MEDIA_VOLUME_ID}
+      MEDIA_VOLUME_SIZE: ${MEDIA_VOLUME_SIZE}
