feat(metal): enable OpenStack Designate service
This merge makes the following changes:

- Enables OpenStack Designate service.
- Adds `wait_for_connection` Ansible role, and removes hacky use of `hashicorp/time` provider.
- Fixes deployment test security group to allow all protocols.
- Adds a basic function test for Designate.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/59

--- a/metal/10-deploy-openstack.yml
+++ b/metal/10-deploy-openstack.yml
@@ -6,10 +6,12 @@
   hosts: all
   remote_user: root
   become: true
+  gather_facts: false  # We do this in `wait_for_connection` role
   vars_files:
     - vars/globals.yml
     - vars/main.yml
   roles:
+    - common/wait_for_connection
     - openstack/kolla-deploy
     - openstack/defaults
     - openstack/cinder
